[Kerry] add animation for slide description

--- a/app/index.html
+++ b/app/index.html
@@ -17,19 +17,24 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide blue-slide">
-                <div class="title">Vertical Mode</div>
-                <p>Swipe to the Top or to the Bottom</p>
+                <section class="description">
+                    <div class="title">Vertical Mode</div>
+                    <p>Swipe to the Top or to the Bottom</p>    
+                </section>                    
               </div>
               <div class="swiper-slide red-slide">
-                <div class="title">Slide 2</div>
-                <p>Keep swiping</p>
+                <section class="description">
+                    <div class="title">Slide 2</div>
+                    <p>Keep swiping</p>
+                </section>
               </div>
               <div class="swiper-slide orange-slide">
-                <div class="title">Slide 3</div>
-                <p>The last one</p>
+                <section class="description">
+                    <div class="title">Slide 3</div>
+                    <p>The last one</p>    
+                </section>
               </div>
-            </div>
-            <div class="pagination"></div>
+            </div>            
         </div>
 
         <!-- build:js scripts/vendor.js -->
