[Kerry] fix gulpfile.js serve:dist issue & clean code for gulpfile

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
         <title>Online PPT</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- build:css styles/main.css -->
+        <!-- build:css styles/mobile.css -->
         <link rel="stylesheet" href="styles/mobile.css">
         <!-- endbuild -->
     </head>
@@ -42,7 +42,7 @@
         <script src="bower_components/swiper/dist/idangerous.swiper.js"></script>
         <!-- endbuild -->
         
-        <!-- build:js scripts/main.js -->
+        <!-- build:js scripts/mobile.js -->
         <script src="scripts/mobile/main.js"></script>
         <!-- endbuild -->
 </body>
