[Kerry] refactor project folder structure & update gulpfile

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- build:css styles/mobile.css -->
-        <link rel="stylesheet" href="styles/mobile.css">
+        <link rel="stylesheet" href="styles/mobile/default/mobile-default.css">
         <!-- endbuild -->
     </head>
     <body>
