[Kerry] fix gulpfile serve issue & add html2canvas Demo

--- a/app/edit.html
+++ b/app/edit.html
@@ -15,6 +15,12 @@
         <![endif]-->
 
         
+        <div class="test">asdfsaf</div>
+
+        <button id="convert">转化</button>
+
+
+
 
         <!-- build:js scripts/desktop/edit-vendor.js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
