[Kerry] refactor folder structure

--- a/app/desktop/edit.html
+++ b/app/desktop/edit.html
@@ -5,8 +5,8 @@
         <title>Online PPT</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- build:css({.tmp,app}) styles/desktop/edit.css -->
-        <link rel="stylesheet" href="styles/desktop/edit.css">
+        <!-- build:css({.tmp/desktop,app}) styles/edit.css -->
+        <link rel="stylesheet" href="./styles/edit.css">
         <!-- endbuild -->
     </head>
     <body>
@@ -21,14 +21,13 @@
 
 
 
-
-        <!-- build:js scripts/desktop/edit-vendor.js -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/html2canvas/build/html2canvas.js"></script>
+        <!-- build:js scripts/edit-vendor.js -->
+        <script src="../bower_components/jquery/dist/jquery.js"></script>
+        <script src="../bower_components/html2canvas/build/html2canvas.js"></script>
         <!-- endbuild -->
         
-        <!-- build:js scripts/desktop/edit.js -->
-        <script src="scripts/desktop/edit.js"></script>
+        <!-- build:js scripts/main.js -->
+        <script src="./scripts/edit.js"></script>
         <!-- endbuild -->
 </body>
 </html>
