--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -6,13 +6,13 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- build:css styles/mobile/default/mobile-vendor.css -->
-        <link rel="stylesheet" href="bower_components/swiper/src/idangerous.swiper.css">
-        <link rel="stylesheet" href="bower_components/animation-css/animate.css">
+        <!-- build:css styles/default/mobile-vendor.css -->
+        <link rel="stylesheet" href="../bower_components/swiper/src/idangerous.swiper.css">
+        <link rel="stylesheet" href="../bower_components/animation-css/animate.css">
         <!-- endbuild -->
 
-        <!-- build:css({.tmp,app}) styles/mobile/default/mobile.css -->
-        <link rel="stylesheet" href="styles/mobile/default/mobile-default.css">
+        <!-- build:css({.tmp/mobile,app}) styles/default/mobile.css -->
+        <link rel="stylesheet" href="./styles/default/mobile-default.css">
         <!-- endbuild -->
     </head>
     <body>
@@ -43,13 +43,13 @@
             </div>            
         </div>
 
-        <!-- build:js scripts/mobile/mobile-vendor.js -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/swiper/dist/idangerous.swiper.js"></script>
+        <!-- build:js scripts/mobile-vendor.js -->
+        <script src="../bower_components/jquery/dist/jquery.js"></script>
+        <script src="../bower_components/swiper/dist/idangerous.swiper.js"></script>
         <!-- endbuild -->
         
-        <!-- build:js scripts/mobile/mobile.js -->
-        <script src="scripts/mobile/mobile.js"></script>
+        <!-- build:js scripts/main.js -->
+        <script src="./scripts/mobile.js"></script>
         <!-- endbuild -->
 </body>
 </html>
