[Kerry] spike compositeView and itemview

--- a/app/desktop/edit.html
+++ b/app/desktop/edit.html
@@ -25,6 +25,10 @@
             </section>
         </script>
 
+        <script id="nav-collection-view" type="text/template">
+            <ul></ul><i>asdfasafasfa</i><b>afasfdf af as</b>
+        </script>
+
         <script id="nav-item-view" type="text/template">
                 <%= name %>
                 <%= age %>
