[Kerry] nav bar and dashboard data sync

--- a/app/desktop/edit.html
+++ b/app/desktop/edit.html
@@ -39,9 +39,9 @@
         <script id="dashboard-item-view" type="text/template">
             <div class="mobile-wrapper">
                 <input class="title-input" type="text" placeholder="Please input title" value="<%= title %>" />
-                <textarea class="description-input" placeholder="Please input description" value="<%= description %>"></textarea>
+                <textarea class="description-input" placeholder="Please input description"><%= description %></textarea>
             </div>
-            <input class="save" value="save" />            
+            <input type="button" class="save" value="save" />            
         </script>
 
 
