[Kerry] add router and controller into module

--- a/app/desktop/edit.html
+++ b/app/desktop/edit.html
@@ -25,6 +25,7 @@
                     
                 </section>
             </section>
+            <section id="login-content"></section>
         </script>
 
         <script id="nav-collection-view" type="text/template">
@@ -44,10 +45,18 @@
             <input type="button" class="save" value="save" />            
         </script>
 
-
+        <script id="login-view" type="text/template">
+            asfasf
+            asfasffasd
+            fa
+            sfas
+            f
+            a            
+        </script>
 
         <!-- build:js scripts/edit-vendor.js -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
+        <script src="../bower_components/json2/json2.js"></script>
         <script src="../bower_components/handlebars/handlebars.js"></script>
         <script src="../bower_components/underscore/underscore.js"></script>
         <script src="../bower_components/backbone/backbone.js"></script>
@@ -59,6 +68,7 @@
         <!-- build:js scripts/main.js -->
         <script src="./scripts/global.js"></script>
         <script src="./scripts/layout-module.js"></script>
+        <script src="./scripts/login-module.js"></script>
         <script src="./scripts/sidebar-module.js"></script>
         <script src="./scripts/dashboard-module.js"></script>
         <script src="./scripts/main.js"></script>
